# zen

./: .example.env  .gitignore  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0400d8b2b5fb_init_database.py  154c17808a72_init_database.py  23bddccf973b_init_database.py  d152f3d2afa2_init_database.py  ebeb6ca67de9_init_database.py
backend/alembic/: env.py
backend/alembic/versions/: 23bddccf973b_init_database.py
backend/src/: main.py  settings.py
backend/src/api/: __init__.py  router.py  utils.py
backend/src/api/dependencies/: __init__.py  database.py  services.py  validation.py
backend/src/api/v1/: __init__.py  categories.py  expenses.py  router.py  users.py
backend/src/core/repository/: __init__.py  repository.py  sqlalchemy_repository.py
backend/src/database/: database.py
backend/src/models/: __init__.py  categories.py  expenses.py  users.py
backend/src/repositories/: __init__.py  categories.py  expenses.py  users.py
backend/src/schemas/: categories.py  expenses.py  users.py
backend/src/services/: __init__.py  categories.py  expenses.py  users.py
src/: main.py  settings.py
src/api/: __init__.py  router.py  utils.py
src/api/auth/: __init__.py  router.py
src/api/dependencies/: __init__.py  auth.py  database.py  services.py  unit_of_work.py  validation.py
src/api/middlewares/: __init__.py  error_handling_middleware.py
src/api/v1/: __init__.py  categories.py  expenses.py  router.py  users.py
src/core/repository/: __init__.py  exceptions.py  repository.py  sqlalchemy_repository.py
src/core/unit_of_work/: __init__.py  sqlalchemy_unit_of_work.py  unit_of_work.py
src/database/: __init__.py  database.py  utils.py
src/dataclasses/: __init__.py  categories.py  expenses.py  users.py
src/exceptions/: services.py
src/models/: __init__.py  base.py  categories.py  expenses.py  users.py
src/repositories/: __init__.py  categories.py  expenses.py  users.py
src/schemas/: categories.py  expenses.py  tokens.py  users.py
src/services/: __init__.py  auth.py  categories.py  exceptions.py  expenses.py  users.py
src/storage/redis/: __init__.py  database.py
src/storage/sqlalchemy/: __init__.py  database.py  utils.py
tests/: conftest.py
tests/api/v1/: test_categories.py  test_expenses.py  test_users.py
tests/fixtures/: categories.py  core.py  expenses.py  repository.py  unit_of_work.py  users.py
tests/fixtures/database/: database_metadata.py  fixtures.py
tests/fixtures/models/: __init__.py  categories.py  entity.py  expenses.py  users.py
tests/unit_tests/api/v1/: test_categories.py  test_expenses.py  test_users.py
tests/unit_tests/repositories/: test_sqlalchemy_repository.py
