[tool.poetry]
name = "zen"
version = "0.1.0"
description = ""
authors = ["Rusih100 <rusih100@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.20"}
alembic = "^1.12.0"
pydantic-settings = "^2.0.3"
asyncpg = "^0.28.0"

[tool.black]
line-length = 80
target-version = ['py311']
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | \.venv
  | alembic
  | env
  | venv
  | .ruff_cache
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
combine_as_imports = true
line_length = 80

[tool.ruff]
src = ["src"]
select = ["E", "F" , "UP"]
ignore = ["F821", "UP007", "F401"]
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []
line-length = 80
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
ignore-init-module-imports = true
target-version = "py311"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "alembic",
    "alembic.ini",
    ".env"
]

[tool.ruff.mccabe]
max-complexity = 10


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
ruff = "^0.0.288"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
